--- a/Konscious.Security.Cryptography.Argon2.Test/Konscious - Backup.Security.Cryptography.Argon2.Test.csproj
+++ b/Konscious.Security.Cryptography.Argon2.Test/Konscious - Backup.Security.Cryptography.Argon2.Test.csproj
@@ -19,5 +19,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="xunit" Version="2.7.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
