--- a/Konscious.Security.Cryptography.Argon2/Konscious.Security.Cryptography.Argon2.csproj
+++ b/Konscious.Security.Cryptography.Argon2/Konscious.Security.Cryptography.Argon2.csproj
@@ -30,7 +30,7 @@ C# Implementation of the Argon2 1.3 spec with variants for Argon2i, Argon2d, and
     <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">1.1.1</RuntimeFrameworkVersion>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">$(PackageTargetFallback);net46</PackageTargetFallback>
     <NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netstandard1.3' ">1.6.1</NetStandardImplicitPackageVersion>
-    <TargetFrameworks>netstandard1.3;net4.6;net6.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Version>1.3.0</Version>
   </PropertyGroup>
@@ -44,10 +44,7 @@ C# Implementation of the Argon2 1.3 spec with variants for Argon2i, Argon2d, and
     <ProjectReference Include="../Konscious.Security.Cryptography.Blake2/Konscious.Security.Cryptography.Blake2.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.3">
-      <PrivateAssets>All</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="System.Memory" Version="4.5.4" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
     <Reference Include="System" />
